# TechnoTrack

./: README.md
homework-1/: CMakeLists.txt.in  README.md  square_equation.c
homework-1/include/: square_equation.h
homework-1/src/: CMakeLists.txt  square_equation.c
homework-1/test/: main.cpp
homework-2/: CMakeLists.txt
homework-2/include/: pointers.h  quick_sort.h  square_equation.h
homework-2/src/: CMakeLists.txt  main.c  pointers.c  quick_sort.c
homework-2/test/: CMakeLists.txt  test_solver.cpp
